--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -10,10 +10,10 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: <?>
+        run: npm install
         working-directory: ./my-agora-states-client
       - name: Build
-        run: <?>
+        run: npm run build
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         run: |
